codex-exp: iteration 1