@@ -1,7 +1,4 @@
 import java.awt.*;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
 import java.util.Map;
 
 /**
@@ -15,7 +12,9 @@ public class SimulationInfo {
     /**
      * The list of the classes of all actors in the simulation
      */
-    public static final List<Class> ALL_ACTORS = new ArrayList<>(Arrays.asList(Grass.class, Deer.class, Coyote.class, Wolf.class, Eagle.class, Hunter.class, Mouse.class));
+    public static final java.util.List<Class<?>> ALL_ACTORS = java.util.List.of(
+            Grass.class, Deer.class, Coyote.class, Wolf.class, Eagle.class, Hunter.class, Mouse.class
+    );
 
     /**
      * A Map connecting each class in the simulation to a default colour
@@ -33,7 +32,7 @@ public class SimulationInfo {
     /**
      * Utility fields to help with the running of TestingMain
      */
-    public static Integer HIGHEST_STEPS = 0;
-    public static Map<Class<?>, Double> HIGHEST_STEP_PROBS;
+    public static int HIGHEST_STEPS = 0;
+    public static Map<Class<?>, Double> HIGHEST_STEP_PROBS = Map.of();
 
 }
