@@ -30,7 +30,7 @@ public class Wolf extends Animal
     // The food value of a single wolf.
     private static final int FOOD_VALUE = 6;
     // A set of organisms that a wolf consumes
-    private static final Set<Class> DIET = new HashSet<>(Arrays.asList(Deer.class, Mouse.class, Coyote.class));
+    private static final Set<Class<?>> DIET = Set.of(Deer.class, Mouse.class, Coyote.class);
 
     // Implementing abstract methods to return fields to be used by the superclass
     protected double BREEDING_AGE() { return BREEDING_AGE; }
@@ -39,7 +39,7 @@ public class Wolf extends Animal
     protected int MAX_AGE() { return MAX_AGE; }
     protected int MAX_FOOD_LEVEL() { return MAX_FOOD_LEVEL; }
     protected int FOOD_VALUE() { return FOOD_VALUE; }
-    protected Set<Class> DIET() { return DIET; }
+    protected Set<Class<?>> DIET() { return DIET; }
 
     /**
      * Create a wolf. A wolf can be created as a new born (age zero
